external-crates/move/crates/move-compiler/tests/move_2024/matching/invalid_malformed_nested_enum.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E04036]: non-exhaustive pattern
   ┌─ tests/move_2024/matching/invalid_malformed_nested_enum.move:15:16
   │
15 │         match (o) {
   │                ^ Pattern 'Outer::X(Inner::P(_))' not covered

error[E03006]: unexpected name in this position
   ┌─ tests/move_2024/matching/invalid_malformed_nested_enum.move:16:31
   │
16 │             Outer::X(Inner::P(v0x0::M)) => v,
   │                               ^^^^ Could not resolve the name 'v0x0'

error[E03009]: unbound variable
   ┌─ tests/move_2024/matching/invalid_malformed_nested_enum.move:16:44
   │
14 │     fun f(o: Outer): u64 {
   │           - Similarly named defintion found here
15 │         match (o) {
16 │             Outer::X(Inner::P(v0x0::M)) => v,
   │                                            ^
   │                                            │
   │                                            Unbound variable 'v'
   │                                            Did you mean: 'o'

error[E04016]: too few arguments
   ┌─ tests/move_2024/matching/invalid_malformed_nested_enum.move:17:13
   │
17 │             Outer::X Outer::X(Inner::P(v)) => v,
   │             ^^^^^^^^ Missing pattern for field '0' in '0x0::M::Outer::X'

error[E01002]: unexpected token
   ┌─ tests/move_2024/matching/invalid_malformed_nested_enum.move:17:22
   │
17 │             Outer::X Outer::X(Inner::P(v)) => v,
   │                      ^^^^^
   │                      │
   │                      Unexpected 'Outer'
   │                      Expected '=>'

error[E03020]: unbound variant
   ┌─ tests/move_2024/matching/invalid_malformed_nested_enum.move:18:22
   │  
 5 │ ╭     public enum Inner {
 6 │ │         P(u64),
 7 │ │     }
   │ ╰─────' Enum 'Inner' is defined here
   · │
18 │               Outer::X(Inner::Q) => 0,
   │                        ^^^^^^^^ Invalid construction. Variant 'Q' is not part of this enum
